Topo-cluster calibration/splitting and cone selection, used in simulation sample production /v04 (#372)
* cluster calibration, splitting and cone selection (all adjustments in cell positions for new TileCal geo)

* add tracker resolutions

* clean-up and docu

* doc

--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -94,3 +94,7 @@ gaudi_add_test(recTopoClustersBarrelCaloSystemElecNoise
                 DEPENDS simulateFullCaloSystem
                 FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise.py)
 
+gaudi_add_test(recSplitTopoClustersBarrelCaloSystemElecNoiseConeSelected
+                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+                DEPENDS simulateFullCaloSystem
+		FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise_coneSelection.py)
