--- a/RecFCChhCalorimeter/CMakeLists.txt
+++ b/RecFCChhCalorimeter/CMakeLists.txt
@@ -11,14 +11,14 @@ find_package(ROOT COMPONENTS Physics Tree)
 find_package(FCCEDM)
 find_package(PODIO)
 find_package(HepMC)
-find_package(DD4hep)
-find_package(Geant4)
+
+
 
 gaudi_add_module(RecFCChhCalorimeterPlugins
                  src/components/*.cpp
                  INCLUDE_DIRS FWCore FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter RecFCChhCalorimeter
                  LINK_LIBRARIES FWCore Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation DetCommon)
-target_link_libraries(RecFCChhCalorimeterPlugins ${GEANT4_LIBRARIES})
+target_link_libraries(RecFCChhCalorimeterPlugins ${Geant4_LIBRARIES})
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/RecFCChhCalorimeter)
 
