--- a/RecInterface/CMakeLists.txt
+++ b/RecInterface/CMakeLists.txt
@@ -5,6 +5,7 @@ gaudi_subdir(RecInterface v1r0)
 
 find_package(FCCEDM)
 find_package(PODIO)
+find_package(EDM4HEP)
 
 gaudi_install_headers(RecInterface)
 
