--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -1,102 +1,93 @@
 ################################################################################
 # Package: RecCalorimeter
 ################################################################################
-gaudi_subdir(RecCalorimeter v1r0)
-
-# this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg FCCFWCore Detector/DetInterface Detector/DetSegmentation Detector/DetCommon Reconstruction/RecInterface)
-
-find_package(FastJet)
-find_package(ROOT COMPONENTS Physics Tree)
-find_package(FCCEDM)
-find_package(PODIO)
-find_package(HepMC)
-find_package(EDM4HEP)
 
 
-set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
-include( DD4hep )
+file(GLOB _module_sources src/components/*.cpp)
+gaudi_add_module(k4RecCalorimeterPlugins
+                 SOURCES ${_module_sources}
+                 LINK k4FWCore::k4FWCorePlugins GaudiAlgLib  GaudiKernel DD4hep::DDCore EDM4HEP::edm4hep  k4FWCore::k4Interface FCCDetectors::DetSegmentation DD4hep::DDG4 datamodel datamodelDict ROOT::Core ROOT::Hist) # todo: remove fccedm
 
-gaudi_add_module(RecCalorimeterPlugins
-                 src/components/*.cpp
-                 INCLUDE_DIRS FastJet ROOT FCCFWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter
-                 LINK_LIBRARIES FWCore Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation DetCommon EDM4HEP::edm4hep)
-target_link_libraries(RecCalorimeterPlugins ${Geant4_LIBRARIES})
+install(TARGETS k4RecCalorimeterPlugins
+  EXPORT k4RecCalorimeterTargets
+  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
+  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
+  COMPONENT dev)
 
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests/options DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Reconstruction/RecCalorimeter)
-
-include(CTest)
-gaudi_add_test(genJetClustering
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/genJetClustering.py)
-
-gaudi_add_test(simulateECalSimple
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/geant_fullsim_ecalSimple_singleparticles.py)
-
-gaudi_add_test(EcalReconstructionNoiseFromFile
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               DEPENDS simulateECalSimple
-               FRAMEWORK tests/options/runEcalSimple_ReconstructionSW_noiseFromFile.py
-               PASSREGEX "Segmentation cells  \\(Nphi, Neta, minEta\\): \\[629, 331, 1\\]" )
-
-# TODO: causes issues with CI, investigate
-#gaudi_add_test(EcalReconstructionCheckNumClusters
-#               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
+#install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests/options DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Reconstruction/RecCalorimeter)
+#
+#include(CTest)
+#gaudi_add_test(genJetClustering
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#               COMMAND python Reconstruction/RecCalorimeter/tests/scripts/ecalRecoCheckNumClusters.py
-#               DEPENDS EcalReconstructionNoiseFromFile)
-
-gaudi_add_test(simulateHCal
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/geant_fullsim_hcal_singleparticles.py)
-
-gaudi_add_test(HcalDigitisationWithoutNoise
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               DEPENDS simulateHCal
-               FRAMEWORK tests/options/runHcalDigitisationWithoutNoise.py)
-
-gaudi_add_test(HcalDigitisationFlatNoise
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               DEPENDS simulateHCal
-               FRAMEWORK tests/options/runHcalDigitisationFlatNoise.py)
-
-gaudi_add_test(simulateFullCaloSystem
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/runFullCaloSystem_SimAndDigitisation.py)
-
-gaudi_add_test(reconstructionFullCaloSystem
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS simulateFullCaloSystem
-                FRAMEWORK tests/options/runFullCaloSystem_ReconstructionSW_noNoise.py)
-
-gaudi_add_test(reconstructionFullCaloSystemWithNoise
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS simulateFullCaloSystem
-                FRAMEWORK tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
-                PASSREGEX "Segmentation cells  \\(Nphi, Neta, minEta\\): \\[704, 335, 1\\]")
-
-gaudi_add_test(correctionFullCaloSystem
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS reconstructionFullCaloSystem
-                FRAMEWORK tests/options/runFullCaloSystem_CorrectECalBarrelSliWinClusters.py)
-
-gaudi_add_test(estimatePileup
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                FRAMEWORK tests/options/runPreparePileup.py)
-
-gaudi_add_test(recTopoClustersBarrelCaloSystem
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS simulateFullCaloSystem
-                FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_noNoise.py)
-
-gaudi_add_test(recTopoClustersBarrelCaloSystemElecNoise
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS simulateFullCaloSystem
-                FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise.py)
-
-gaudi_add_test(recSplitTopoClustersBarrelCaloSystemElecNoiseConeSelected
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-                DEPENDS simulateFullCaloSystem
-		FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise_coneSelection.py)
+#               FRAMEWORK tests/options/genJetClustering.py)
+#
+#gaudi_add_test(simulateECalSimple
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               FRAMEWORK tests/options/geant_fullsim_ecalSimple_singleparticles.py)
+#
+#gaudi_add_test(EcalReconstructionNoiseFromFile
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               DEPENDS simulateECalSimple
+#               FRAMEWORK tests/options/runEcalSimple_ReconstructionSW_noiseFromFile.py
+#               PASSREGEX "Segmentation cells  \\(Nphi, Neta, minEta\\): \\[629, 331, 1\\]" )
+#
+## TODO: causes issues with CI, investigate
+##gaudi_add_test(EcalReconstructionCheckNumClusters
+##               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
+##               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+##               COMMAND python Reconstruction/RecCalorimeter/tests/scripts/ecalRecoCheckNumClusters.py
+##               DEPENDS EcalReconstructionNoiseFromFile)
+#
+#gaudi_add_test(simulateHCal
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               FRAMEWORK tests/options/geant_fullsim_hcal_singleparticles.py)
+#
+#gaudi_add_test(HcalDigitisationWithoutNoise
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               DEPENDS simulateHCal
+#               FRAMEWORK tests/options/runHcalDigitisationWithoutNoise.py)
+#
+#gaudi_add_test(HcalDigitisationFlatNoise
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               DEPENDS simulateHCal
+#               FRAMEWORK tests/options/runHcalDigitisationFlatNoise.py)
+#
+#gaudi_add_test(simulateFullCaloSystem
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               FRAMEWORK tests/options/runFullCaloSystem_SimAndDigitisation.py)
+#
+#gaudi_add_test(reconstructionFullCaloSystem
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS simulateFullCaloSystem
+#                FRAMEWORK tests/options/runFullCaloSystem_ReconstructionSW_noNoise.py)
+#
+#gaudi_add_test(reconstructionFullCaloSystemWithNoise
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS simulateFullCaloSystem
+#                FRAMEWORK tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
+#                PASSREGEX "Segmentation cells  \\(Nphi, Neta, minEta\\): \\[704, 335, 1\\]")
+#
+#gaudi_add_test(correctionFullCaloSystem
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS reconstructionFullCaloSystem
+#                FRAMEWORK tests/options/runFullCaloSystem_CorrectECalBarrelSliWinClusters.py)
+#
+#gaudi_add_test(estimatePileup
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                FRAMEWORK tests/options/runPreparePileup.py)
+#
+#gaudi_add_test(recTopoClustersBarrelCaloSystem
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS simulateFullCaloSystem
+#                FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_noNoise.py)
+#
+#gaudi_add_test(recTopoClustersBarrelCaloSystemElecNoise
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS simulateFullCaloSystem
+#                FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise.py)
+#
+#gaudi_add_test(recSplitTopoClustersBarrelCaloSystemElecNoiseConeSelected
+#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#                DEPENDS simulateFullCaloSystem
+#		FRAMEWORK tests/options/runBarrelCaloSystem_ReconstructionTopoClusters_electrNoise_coneSelection.py)
