--- a/.github/workflows/nightlies.yaml
+++ b/.github/workflows/nightlies.yaml
@@ -25,7 +25,7 @@ jobs:
         mkdir build install;\
         cd build;\
         cmake -DCMAKE_INSTALL_PREFIX=../install -DBUILD_TESTING=ON ..;\
-        make -j install;'
+        make -j `getconf _NPROCESSORS_ONLN` install;'
 
     - name: Test
       run: |
