--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -16,7 +16,16 @@ install(TARGETS k4RecFCCeeCalorimeterPlugins
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/RecFCCeeCalorimeter)
 
-#gaudi_add_test(reconstructFullCaloSystemCellPositions
-#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#           DEPENDS simulateFullCaloSystemForCellPositions
-#           FRAMEWORK tests/options/recoPositions_fullCaloSystem.py)
+
+
+add_test(NAME FCCeeLAr_reproduceSegfault
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+         COMMAND k4run RecFCCeeCalorimeter/tests/options/reproduceSegfault.py)
+add_test(NAME FCCeeLAr_simulateForReco
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+         COMMAND k4run RecFCCeeCalorimeter/tests/options/runCaloSim.py)
+add_test(NAME FCCeeLAr_slidingWindowClustering
+         COMMAND k4run RecFCCeeCalorimeter/tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+           )
+set_tests_properties(FCCeeLAr_slidingWindowClustering PROPERTIES DEPENDS "FCCeeLAr_simulateForReco")
