--- a/RecFCChhCalorimeter/CMakeLists.txt
+++ b/RecFCChhCalorimeter/CMakeLists.txt
@@ -5,7 +5,7 @@
 file(GLOB _module_sources src/components/*.cpp)
 gaudi_add_module(k4RecFCChhCalorimeterPlugins
                  SOURCES ${_module_sources}
-                 LINK k4FWCore::k4FWCorePlugins GaudiAlgLib  GaudiKernel DD4hep::DDCore EDM4HEP::edm4hep  k4FWCore::k4Interface FCCDetectors::DetSegmentation DD4hep::DDG4 ROOT::Core ROOT::Hist)
+                 LINK k4FWCore::k4FWCorePlugins GaudiAlgLib  GaudiKernel DD4hep::DDCore EDM4HEP::edm4hep  k4FWCore::k4Interface FCCDetectors::DetSegmentation FCCDetectors::DetCommon DD4hep::DDG4 ROOT::Core ROOT::Hist)
 
 install(TARGETS k4RecFCChhCalorimeterPlugins
   EXPORT k4RecCalorimeterTargets
