--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -6,7 +6,18 @@
 file(GLOB _module_sources src/components/*.cpp)
 gaudi_add_module(k4RecCalorimeterPlugins
                  SOURCES ${_module_sources}
-                 LINK k4FWCore::k4FWCore GaudiAlgLib  GaudiKernel DD4hep::DDCore EDM4HEP::edm4hep  k4FWCore::k4Interface FCCDetectors::DetSegmentation DD4hep::DDG4 ROOT::Core ROOT::Hist FCCDetectors::DetCommon)
+                 LINK k4FWCore::k4FWCore
+                      k4FWCore::k4Interface
+                      Gaudi::GaudiAlgLib
+                      Gaudi::GaudiKernel
+                      DD4hep::DDCore
+                      DD4hep::DDG4
+                      EDM4HEP::edm4hep
+                      ROOT::Core
+                      ROOT::Hist
+                      FCCDetectors::DetSegmentation
+                      FCCDetectors::DetCommon
+                      )
 
 install(TARGETS k4RecCalorimeterPlugins
   EXPORT k4RecCalorimeterTargets
