--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -5,7 +5,17 @@
 file(GLOB _module_sources src/components/*.cpp)
 gaudi_add_module(k4RecFCCeeCalorimeterPlugins
                  SOURCES ${_module_sources}
-                 LINK k4FWCore::k4FWCorePlugins GaudiAlgLib  GaudiKernel DD4hep::DDCore EDM4HEP::edm4hep  k4FWCore::k4Interface FCCDetectors::DetSegmentation DD4hep::DDG4 ROOT::Core ROOT::Hist)
+                 LINK k4FWCore::k4FWCore
+                      k4FWCore::k4Interface
+                      Gaudi::GaudiAlgLib
+                      Gaudi::GaudiKernel
+                      DD4hep::DDCore
+                      EDM4HEP::edm4hep
+                      FCCDetectors::DetSegmentation
+                      DD4hep::DDG4
+                      ROOT::Core
+                      ROOT::Hist
+                      )
 
 install(TARGETS k4RecFCCeeCalorimeterPlugins
   EXPORT k4RecCalorimeterTargets
