--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,30 @@ find_package(FCCDetectors)
 #---------------------------------------------------------------
 
 
+#--- The genConf directory has been renamed to genConfDir in Gaudi 35r1
+#--- See https://gitlab.cern.ch/gaudi/Gaudi/-/merge_requests/1158
+set(GAUDI_GENCONF_DIR "genConfDir")
+if (${Gaudi_VERSION} VERSION_LESS 35.1)
+  set(GAUDI_GENCONF_DIR "genConf")
+endif()
+
+function(set_test_env _testname)
+  set_property(TEST ${_testname} APPEND PROPERTY ENVIRONMENT
+               LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4RecCalorimeterPlugins>:${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4RecFCCeeCalorimeterPlugins>:${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4RecFCChhCalorimeterPlugins>:$<TARGET_FILE_DIR:ROOT::Core>:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>:$<TARGET_FILE_DIR:EDM4HEP::edm4hep>:$<TARGET_FILE_DIR:podio::podio>:$ENV{LD_LIBRARY_PATH})
+
+  set_property(TEST ${_testname} APPEND PROPERTY ENVIRONMENT
+               PYTHONPATH=${CMAKE_BINARY_DIR}/RecCalorimeter/${GAUDI_GENCONF_DIR}:${CMAKE_BINARY_DIR}/RecFCCeeCalorimeter/${GAUDI_GENCONF_DIR}:${CMAKE_BINARY_DIR}/RecFCChhCalorimeter/${GAUDI_GENCONF_DIR}:$ENV{PYTHONPATH}:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../python:$ENV{PYTHONPATH})
+
+  set_property(TEST ${_testname} APPEND PROPERTY ENVIRONMENT
+               PATH=$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../bin:$ENV{PATH}
+  )
+
+  set_property(TEST ${_testname} APPEND PROPERTY ENVIRONMENT
+               K4RECCALORIMETER=${CMAKE_CURRENT_LIST_DIR}/
+  )
+endfunction()
+
+
 add_subdirectory(RecCalorimeter)
 add_subdirectory(RecFCChhCalorimeter)
 add_subdirectory(RecFCCeeCalorimeter)
