--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -26,16 +26,22 @@ install(TARGETS k4RecFCCeeCalorimeterPlugins
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/RecFCCeeCalorimeter)
 
-
-
 add_test(NAME FCCeeLAr_reproduceSegfault
          COMMAND k4run RecFCCeeCalorimeter/tests/options/reproduceSegfault.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 add_test(NAME FCCeeLAr_simulateForReco
          COMMAND k4run RecFCCeeCalorimeter/tests/options/runCaloSim.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 add_test(NAME FCCeeLAr_slidingWindowClustering
          COMMAND k4run RecFCCeeCalorimeter/tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
            )
 set_tests_properties(FCCeeLAr_slidingWindowClustering PROPERTIES DEPENDS "FCCeeLAr_simulateForReco")
+
+add_test(NAME FCCeeLAr_benchmarkCalibration
+         COMMAND k4run RecCalorimeter/tests/options/fcc_ee_caloBenchmarkCalibration.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCCeeLAr_benchmarkCalibration)
