--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -28,16 +28,21 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DA
 
 add_test(NAME FCCeeLAr_reproduceSegfault
          COMMAND k4run RecFCCeeCalorimeter/tests/options/reproduceSegfault.py
-         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCCeeLAr_reproduceSegfault)
 
 add_test(NAME FCCeeLAr_simulateForReco
          COMMAND k4run RecFCCeeCalorimeter/tests/options/runCaloSim.py
-         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCCeeLAr_simulateForReco)
 
 add_test(NAME FCCeeLAr_slidingWindowClustering
          COMMAND k4run RecFCCeeCalorimeter/tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-           )
+)
+set_test_env(FCCeeLAr_slidingWindowClustering)
 set_tests_properties(FCCeeLAr_slidingWindowClustering PROPERTIES DEPENDS "FCCeeLAr_simulateForReco")
 
 add_test(NAME FCCeeLAr_benchmarkCalibration
