--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 find_package(ROOT COMPONENTS RIO Tree)
 find_package(Gaudi)
 find_package(k4FWCore) # implicit: Gaudi
-find_package(EDM4HEP) # implicit: Podio
+find_package(EDM4HEP 0.10.1) # implicit: Podio
 find_package(DD4hep)
 find_package(FCCDetectors)
 #---------------------------------------------------------------
