migrate theta-module readout and related code to k4geo

--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -15,8 +15,8 @@ gaudi_add_module(k4RecCalorimeterPlugins
                       EDM4HEP::edm4hep
                       ROOT::Core
                       ROOT::Hist
-                      FCCDetectors::DetSegmentation
-                      FCCDetectors::DetCommon
+                      k4geo::detectorSegmentations
+                      k4geo::detectorCommon
                       )
 
 install(TARGETS k4RecCalorimeterPlugins
