--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -11,8 +11,8 @@ gaudi_add_module(k4RecFCCeeCalorimeterPlugins
                       Gaudi::GaudiKernel
                       DD4hep::DDCore
                       EDM4HEP::edm4hep
-                      FCCDetectors::DetSegmentation
-                      FCCDetectors::DetCommon
+                      k4geo::detectorSegmentations
+                      k4geo::detectorCommon
                       DD4hep::DDG4
                       ROOT::Core
                       ROOT::Hist
