--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         STACK: ['/cvmfs/sw-nightlies.hsf.org/key4hep/setup.sh',
                 '/cvmfs/sw.hsf.org/key4hep/setup.sh']
-        OS: ['centos7', 'alma9']
+        OS: ['aidasoft/centos7', 'key4hep/key4hep-images/alma9']
     steps:
     - uses: actions/checkout@v3
     - uses: cvmfs-contrib/github-action-cvmfs@v3
@@ -16,7 +16,7 @@ jobs:
         docker run -it --name CI_container \
                        -v ${GITHUB_WORKSPACE}:/Package \
                        -v /cvmfs:/cvmfs:shared \
-                       -d ghcr.io/key4hep/key4hep-images/${{ matrix.OS }}:latest /bin/bash
+                       -d ghcr.io/${{ matrix.OS }}:latest /bin/bash
     - name: Compile
       run: |
         docker exec CI_container /bin/bash -c 'cd ./Package;\
