--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -4,6 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         STACK: ['/cvmfs/sw-nightlies.hsf.org/key4hep/setup.sh',
                 '/cvmfs/sw.hsf.org/key4hep/setup.sh']
