--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -7,8 +7,12 @@ jobs:
       fail-fast: false
       matrix:
         STACK: ['/cvmfs/sw-nightlies.hsf.org/key4hep/setup.sh',
-                '/cvmfs/sw.hsf.org/key4hep/setup.sh']
-        OS: ['aidasoft/centos7', 'key4hep/key4hep-images/alma9']
+                # '/cvmfs/sw.hsf.org/key4hep/setup.sh'
+        ]
+        OS: ['aidasoft/centos7',
+             'key4hep/key4hep-images/alma9',
+             'key4hep/key4hep-images/ubuntu22'
+        ]
     steps:
     - uses: actions/checkout@v3
     - uses: cvmfs-contrib/github-action-cvmfs@v3
