Support building with onnxruntime 17.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,9 @@ find_package(EDM4HEP 0.10.1) # implicit: Podio
 find_package(DD4hep)
 find_package(k4geo)
 find_package(ONNXRuntime)
+# New versions of ONNRuntime package provide onnxruntime-Config.cmake
+# and use the name onnxruntime
+find_package(onnxruntime)
 #---------------------------------------------------------------
 
 
