Addressing some changes from MR

--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # ONNX DEPENDENCIES
 # includes
-include_directories(${ONNXRUNTIME_INCLUDE_DIRS})
+include_directories("${ONNXRUNTIME_INCLUDE_DIRS}")
 # libs
 link_directories("${ONNXRUNTIME_LIBRARY_DIRS}")
 # New versions of ONNXRuntime add directories to include
