Adding tools for jet clustering for cluster and truth particles (#80)
* Small changes to cmake lists

* Adding tools for jet reconstruction

* Adding truth jet algorithms

* Fixing CMake change

* Addressing some comments from the PR

* Switching to thread safe Gaudi functional

* Minor code cleanup

* More code cleanup

* Adding an extra algorithm to filter truth particles

* One last removal for filtering

* Adding separate jet clustering helper class

* Adding some checks of the configuration in ClusterJet

* A few updates to namespace etc

* Addressing some changes from MR

* Removing some commented lines

* Update RecCalorimeter/src/components/FilterTruthParticles.cpp

Co-authored-by: Brieuc Francois <brieuc.francois@cern.ch>

* Removing more unnecessary code

* Adding tool descriptions

* Addressing a few more MR comments

* Fixing the tests in the CMake file

* Changing the naming for truth particle filter

* Fixing naming for truth jet test

* Switching to using associations for truth jets

---------

Co-authored-by: Brieuc Francois <brieuc.francois@cern.ch>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ find_package(EDM4HEP 0.10.1) # implicit: Podio
 find_package(DD4hep)
 find_package(k4geo)
 find_package(ONNXRuntime)
+find_package(FastJet)
 # New versions of ONNRuntime package provide onnxruntime-Config.cmake
 # and use the name onnxruntime
 find_package(onnxruntime)
@@ -62,9 +63,6 @@ endfunction()
 add_subdirectory(RecCalorimeter)
 add_subdirectory(RecFCChhCalorimeter)
 add_subdirectory(RecFCCeeCalorimeter)
-
-
-
 
 
 install(EXPORT ${PROJECT_NAME}Targets
