--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -3,9 +3,10 @@
 ################################################################################
 
 
-file(GLOB _module_sources src/components/*.cpp)
+file(GLOB _module_sources src/components/*.cpp )
+
 gaudi_add_module(k4RecCalorimeterPlugins
-                 SOURCES ${_module_sources}
+                 SOURCES ${_module_sources} 
                  LINK k4FWCore::k4FWCore
                       k4FWCore::k4Interface
                       Gaudi::GaudiAlgLib
@@ -17,6 +18,7 @@ gaudi_add_module(k4RecCalorimeterPlugins
                       ROOT::Hist
                       k4geo::detectorSegmentations
                       k4geo::detectorCommon
+                      ${FASTJET_LIBRARIES}
                       )
 
 install(TARGETS k4RecCalorimeterPlugins
@@ -26,7 +28,23 @@ install(TARGETS k4RecCalorimeterPlugins
   COMPONENT dev)
 
 
+
+include_directories(${FASTJET_INCLUDE_DIRS} include/RecCalorimeter)
+link_directories(${FASTJET_LIBRARIES})
+
 include(CTest)
+
+add_test(NAME FCC_createJets
+  COMMAND k4run RecCalorimeter/tests/options/runJetReco.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCC_createJets)
+
+add_test(NAME FCC_createTruthJets
+  COMMAND k4run RecCalorimeter/tests/options/runTruthJetReco.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCC_createTruthJets)
 
 #install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests/options DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Reconstruction/RecCalorimeter)
 #
