Executing external process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,3 +80,4 @@ message(STATUS "LD_LIBRARY_PATH:\n${LD_LIBRARY_PATH}\n")
 message(STATUS "ROOT_INCLUDE_PATH:\n${ROOT_INCLUDE_PATH}\n")
 message(STATUS "CPATH:\n${CPATH}\n")
 message(STATUS "PYTHONPATH:\n${PYTHONPATH}\n")
+execute_process(COMMAND "${CMAKE_COMMAND}" "-E" "environment")
