Campaing to fix tests / compilation warnings (#93)
* Adjusting CreateCaloJet

* Moving ClusterJet to common directory

* Formatting

* Adjusting CreateTruthJet and FilterTruthParticlesForGenJets

* Debugging prints

* Moving debug printout elsewhere

* Executing external process

* Using edm4hep::labels everywhere

* Removing  from target creation

* Using fastjet link directories

* Removed unnecessary messages

* Fixed missing comma

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 find_package(ROOT COMPONENTS RIO Tree)
 find_package(Gaudi)
 find_package(k4FWCore) # implicit: Gaudi
-find_package(EDM4HEP 0.10.1) # implicit: Podio
+find_package(EDM4HEP) # implicit: Podio
 find_package(DD4hep)
 find_package(k4geo)
 find_package(ONNXRuntime)
@@ -60,6 +60,7 @@ function(set_test_env _testname)
 endfunction()
 
 
+add_subdirectory(RecCaloCommon)
 add_subdirectory(RecCalorimeter)
 add_subdirectory(RecFCChhCalorimeter)
 add_subdirectory(RecFCCeeCalorimeter)
@@ -72,4 +73,3 @@ install(EXPORT ${PROJECT_NAME}Targets
   )
 
 gaudi_install(CMAKE cmake/${PROJECT_NAME}Config.cmake)
-
